Change structure for final analysis data

--- a/project.ipynb
+++ b/project.ipynb
@@ -1172,8 +1172,14 @@
     "    ratios = [d[0] / d[1] if d[1] != 0 else 0 for d in distances]\n",
     "    std_dev = np.std(ratios)\n",
     "    \n",
-    "    # Return the features\n",
-    "    return ratios + [std_dev]\n"
+    "    assymetry_features = { 'std_dev': std_dev, 'ratios': ratios}\n",
+    " \n",
+    "    #Assymetry features in that format\n",
+    "    assymetry_features = { 'std_dev': std_dev }\n",
+    "    assymetry_features.update({ f'ratio_{i}': val for i, val in enumerate(ratios) })\n",
+    "    \n",
+    "    # Return the features in a dictionary\n",
+    "    return assymetry_features\n"
    ]
   },
   {
@@ -1252,7 +1258,9 @@
     "        else:\n",
     "            large_irregularities['straight_lines'] += 1\n",
     "\n",
-    "    # Return the calculated features\n",
+    "    \n",
+    "\n",
+    "    # Return the calculated features in a dictionary\n",
     "    return small_irregularities, large_irregularities\n"
    ]
   },
@@ -1380,6 +1388,11 @@
     "        'fractal_dimensions_parts': D_parts,\n",
     "        'fractal_dimension_D2': D2\n",
     "    }\n",
+    "\n",
+    "    # Return the features in a dictionary\n",
+    "    texture_features = { 'fractal_dimension_total': D }\n",
+    "    texture_features.update({ f'fractal_dimension_part_{i}': val for i, val in enumerate(D_parts) })\n",
+    "    texture_features['fractal_dimension_D2'] = D2\n",
     "    \n",
     "    return texture_features"
    ]
@@ -1398,13 +1411,16 @@
    "outputs": [],
    "source": [
     "def get_features(image):\n",
-    "    return [\n",
-    "        image[0], \n",
-    "        calculate_assymetry_features(image), \n",
-    "        calculate_border_irregularity_features(image[6]), \n",
-    "        calculate_color_features(image[1]), \n",
-    "        calculate_texture_features(image[5])\n",
-    "    ] \n",
+    "    \n",
+    "    id = {'ID':image[0]}\n",
+    "    assymetry_features = calculate_assymetry_features(image)\n",
+    "    small_irregularities, large_irregularities = calculate_border_irregularity_features(image[6])\n",
+    "    color_features = calculate_color_features(image[1])\n",
+    "    texture_features = calculate_texture_features(image[5])\n",
+    "\n",
+    "    \n",
+    "    # Return the features in a dictionary\n",
+    "    return {**id, **assymetry_features, **small_irregularities, **large_irregularities, **color_features, **texture_features}\n",
     "\n",
     "def joblib_features(images):\n",
     "    return Parallel(n_jobs=-2, verbose=1)(delayed(get_features)(image) for image in images)\n",
@@ -1427,8 +1443,10 @@
    "outputs": [],
    "source": [
     "# Create a DataFrame with the calculated features and the features from the metadata\n",
-    "train_features_df = pd.DataFrame(train_images_features, columns=['ID', 'asymmetry', 'border_irregularity', 'color', 'texture'])\n",
-    "test_features_df = pd.DataFrame(test_images_features, columns=['ID', 'asymmetry', 'border_irregularity', 'color', 'texture'])\n",
+    "train_features_df = pd.DataFrame(train_images_features)\n",
+    "test_features_df = pd.DataFrame(test_images_features)\n",
+    "\n",
+    "\n",
     "\n",
     "# Merge the metadata with the calculated features\n",
     "train_data = train_data.merge(train_features_df, on='ID')\n",
