Delete test function

--- a/project.ipynb
+++ b/project.ipynb
@@ -706,12 +706,9 @@
     "def get_gaussian_blur(image):\n",
     "    return cv2.GaussianBlur(image, (25, 25), 0)\n",
     "\n",
-    "def get_gaussian_blur_5(image):\n",
-    "    return cv2.GaussianBlur(image, (5, 5), 0)\n",
-    "\n",
     "#Apply an anisotropic diffusion filter to the grayscale image for smoothing.\n",
-    "train_images = [[image[0], image[1], image[2],get_gaussian_blur(image[2]), get_gaussian_blur_5(image[2])] for image in train_images]\n",
-    "test_images = [[image[0], image[1], image[2],get_gaussian_blur(image[2])] for image in test_images]"
+    "train_images = [[image[0], image[1], image[2],get_gaussian_blur(image[2])] for image in train_images]\n",
+    "test_images =  [[image[0], image[1], image[2],get_gaussian_blur(image[2])] for image in test_images]"
    ]
   },
   {
